c: ngrx selector practice

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,4 +12,6 @@
         [books]="bookCollection$ | async"
         (remove)="onRemove($event)"
     ></app-book-collection>
+    <h2>ScoreBoard</h2>
+    <app-scoreboard></app-scoreboard>
 </main>
